tests/rosetta/out/Haskell/angles-geometric-normalization-and-conversion.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/angles-geometric-normalization-and-conversion.hs:158:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/angles-geometric-normalization-and-conversion.hs:151:1
                 /workspace/mochi/tests/rosetta/out/Haskell/angles-geometric-normalization-and-conversion.hs:158:1
    |
158 | main = do
    | ^^^^
